--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,12 @@
 /.vscode
 /.zed
 /auth.json
+/composer.phar
 /node_modules
 /public/build
 /public/hot
 /public/storage
+/database/database.sqlite
 /storage/*.key
 /storage/pail
 /vendor
